# TiffAnalyzer

./: CMakeLists.txt
include/: bmp.h  calibrationWindow.h  channelSelectionWindow.h  contrastingPanel.h  contrastingWindow.h  coordsConvertor.h  directoryReader.h  histogramCalculator.h  histogramContrastingCalculator.h  histogramPainter.h  histogramPanel.h  httpClient.h  httpRequest.h  httpResponse.h  imageConverter.h  imageLabel.h  imageOptionsPanel.h  imagePainter.h  instrumentsPanel.h  kml.h  kmlCoordsPanel.h  logger.h  mainWindow.h  normalizer.h  onePointCoordsPanel.h  pixelGraphicsWindow.h  pixelReader.h  pixelStatisticsPanel.h  pixelStatusBar.h  pixelsNormalizer.h  polygonChecker.h  rectangleCoordsPanel.h  rgb.h  routeFinder.h  snapshotLoadWindow.h  snapshotLoader.h  snapshotReader.h  spectralPanel.h  spp.h  sppReader.h  (+5 more)
src/: CMakeLists.txt  imageLabel.cpp  main.cpp  mainWindow.cpp  resources.qrc  tiff.cpp
src/Libs/: qcustomplot.cpp
src/TypeDefs/: bmp.cpp  kml.cpp  spp.cpp  tiff.cpp
src/UI/: calibrationWindow.cpp  channelSelectionWindow.cpp  contrastingPanel.cpp  contrastingWindow.cpp  histogramPanel.cpp  imageLabel.cpp  mainWindow.cpp  pixelGraphicsWindow.cpp  pixelStatisticsPanel.cpp  pixelStatusBar.cpp  snapshotLoadWindow.cpp  sppTable.cpp  wavescaleTable.cpp
src/UI/CalibrationWindow/: calibrationWindow.cpp  kmlCoordsPanel.cpp  onePointCoordsPanel.cpp  rectangleCoordsPanel.cpp
src/UI/InstrumentsPanel/: imageOptionsPanel.cpp  instrumentsPanel.cpp  pixelStatisticsPanel.cpp
src/UI/SpectralPanel/: contrastingPanel.cpp  pixelStatisticsPanel.cpp  spectralPanel.cpp
src/Utils/: bmp.cpp  coordsConvertor.cpp  directoryReader.cpp  histogramCalculator.cpp  histogramContrastingCalculator.cpp  histogramPainter.cpp  httpClient.cpp  imageConverter.cpp  imagePainter.cpp  logger.cpp  normalizer.cpp  pixelReader.cpp  pixelsNormalizer.cpp  polygonChecker.cpp  routeFinder.cpp  snapshotLoader.cpp  snapshotReader.cpp  sppReader.cpp  sppTableReader.cpp  tiff.cpp  xmlTagReader.cpp
